@@ -2,11 +2,10 @@ package no.nav.melosys.service.vilkaar;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
+import no.finn.unleash.FakeUnleash;
+import no.nav.melosys.domain.*;
 import no.nav.melosys.domain.dokument.felles.Land;
 import no.nav.melosys.domain.dokument.felles.Periode;
 import no.nav.melosys.domain.dokument.person.PersonDokument;
@@ -15,46 +14,54 @@ import no.nav.melosys.domain.dokument.person.StatsborgerskapPeriode;
 import no.nav.melosys.domain.inngangsvilkar.Feilmelding;
 import no.nav.melosys.domain.inngangsvilkar.InngangsvilkarResponse;
 import no.nav.melosys.domain.inngangsvilkar.Kategori;
+import no.nav.melosys.domain.kodeverk.Aktoersroller;
 import no.nav.melosys.domain.kodeverk.Vilkaar;
 import no.nav.melosys.domain.kodeverk.begrunnelser.Inngangsvilkaar;
+import no.nav.melosys.domain.person.Statsborgerskap;
 import no.nav.melosys.exception.FunksjonellException;
-import no.nav.melosys.exception.TekniskException;
 import no.nav.melosys.integrasjon.inngangsvilkar.InngangsvilkaarConsumerImpl;
 import no.nav.melosys.service.SaksopplysningerService;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import no.nav.melosys.service.behandling.BehandlingService;
+import no.nav.melosys.service.persondata.PersondataService;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import static no.nav.melosys.domain.dokument.felles.Land.*;
 import static no.nav.melosys.domain.util.LandkoderUtils.tilIso3;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertNull;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-@SuppressWarnings("resource")
-@RunWith(MockitoJUnitRunner.class)
-public class InngangsvilkaarServiceTest {
+@ExtendWith(MockitoExtension.class)
+class InngangsvilkaarServiceTest {
     @Mock
-    private SaksopplysningerService saksopplysningerService;
+    private BehandlingService behandlingService;
     @Mock
     private InngangsvilkaarConsumerImpl inngangsvilkaarConsumer;
     @Mock
+    private PersondataService persondataService;
+    @Mock
+    private SaksopplysningerService saksopplysningerService;
+    @Mock
     private VilkaarsresultatService vilkaarsresultatService;
+    private final FakeUnleash unleash = new FakeUnleash();
 
     private InngangsvilkaarService inngangsvilkaarService;
 
-    @Before
-    public void setUp() {
-        inngangsvilkaarService = new InngangsvilkaarService(saksopplysningerService, inngangsvilkaarConsumer, vilkaarsresultatService);
+    @BeforeEach
+    void setUp() {
+        inngangsvilkaarService = new InngangsvilkaarService(behandlingService, inngangsvilkaarConsumer, persondataService,
+            saksopplysningerService, unleash, vilkaarsresultatService);
     }
 
     @Test
-    public void vurderOgLagreInngangsvilkår() throws TekniskException, FunksjonellException {
+    void vurderOgLagreInngangsvilkår() {
         final List<String> landkoder = List.of("FR", "DK", "NO");
         final var periode = new no.nav.melosys.domain.behandlingsgrunnlag.data.Periode(LocalDate.now().plusYears(1), LocalDate.MAX);
         PersonDokument personDokument = new PersonDokument();
@@ -67,12 +74,52 @@ public class InngangsvilkaarServiceTest {
 
         inngangsvilkaarService.vurderOgLagreInngangsvilkår(1L, landkoder, periode);
 
-        verify(inngangsvilkaarConsumer).vurderInngangsvilkår(eq(personDokument.statsborgerskap), eq(Set.copyOf(tilIso3(landkoder))), eq(periode));
-        verify(vilkaarsresultatService).oppdaterVilkaarsresultat(1L, Vilkaar.FO_883_2004_INNGANGSVILKAAR, true, null);
+        verify(inngangsvilkaarConsumer).vurderInngangsvilkår(Set.of(personDokument.statsborgerskap),
+            Set.copyOf(tilIso3(landkoder)), periode);
+        verify(vilkaarsresultatService).oppdaterVilkaarsresultat(1L, Vilkaar.FO_883_2004_INNGANGSVILKAAR, true, Collections.emptySet());
     }
 
     @Test
-    public void vurderOgLagreInngangsvilkår_manglerStatsborgerskap_girBegrunnelse() throws TekniskException, FunksjonellException {
+    void vurderOgLagreInngangsvilkår_statsborgerskapFraPDL() {
+        unleash.enable("melosys.pdl.statsborgerskap");
+        final List<String> søknadsland = List.of("FR", "DK", "NO");
+        final var periode = new no.nav.melosys.domain.behandlingsgrunnlag.data.Periode(LocalDate.now().plusYears(1), LocalDate.MAX);
+        final String ident = "aktørID";
+        when(behandlingService.hentBehandlingUtenSaksopplysninger(anyLong())).thenReturn(lagBehandling(ident));
+        final Set<Statsborgerskap> statsborgerskap = Set.of(
+            new no.nav.melosys.domain.person.Statsborgerskap("FIN", null, LocalDate.parse("1989-11-18"), null, "FREG",
+                "Dolly", false),
+            new no.nav.melosys.domain.person.Statsborgerskap("SWE", LocalDate.parse("2009-11-18"), null, null, "PDL",
+                "Dolly", false)
+        );
+        when(persondataService.hentStatsborgerskap(ident)).thenReturn(statsborgerskap);
+
+        InngangsvilkarResponse res = new InngangsvilkarResponse();
+        res.setFeilmeldinger(Collections.emptyList());
+        res.setKvalifisererForEf883_2004(Boolean.TRUE);
+        when(inngangsvilkaarConsumer.vurderInngangsvilkår(any(), anySet(), any())).thenReturn(res);
+
+        inngangsvilkaarService.vurderOgLagreInngangsvilkår(1L, søknadsland, periode);
+
+        verify(inngangsvilkaarConsumer).vurderInngangsvilkår(Set.of(Land.av(FINLAND), Land.av(SVERIGE)),
+            Set.copyOf(tilIso3(søknadsland)), periode);
+        verify(vilkaarsresultatService).oppdaterVilkaarsresultat(1L, Vilkaar.FO_883_2004_INNGANGSVILKAAR, true,
+            Collections.emptySet());
+    }
+
+    private Behandling lagBehandling(String aktørID) {
+        Fagsak fagsak = new Fagsak();
+        Aktoer aktoer = new Aktoer();
+        aktoer.setRolle(Aktoersroller.BRUKER);
+        aktoer.setAktørId(aktørID);
+        fagsak.setAktører(Set.of(aktoer));
+        Behandling behandling = new Behandling();
+        behandling.setFagsak(fagsak);
+        return behandling;
+    }
+
+    @Test
+    void vurderOgLagreInngangsvilkår_manglerStatsborgerskap_girBegrunnelse() {
         final List<String> landkoder = List.of("FR", "DK", "NO");
         final var periode = new no.nav.melosys.domain.behandlingsgrunnlag.data.Periode(LocalDate.now().minusYears(2), LocalDate.now().minusYears(1));
         final var personhistorikkDokument = new PersonhistorikkDokument();
@@ -82,11 +129,11 @@ public class InngangsvilkaarServiceTest {
         inngangsvilkaarService.vurderOgLagreInngangsvilkår(1L, landkoder, periode);
 
         verify(vilkaarsresultatService).oppdaterVilkaarsresultat(1L, Vilkaar.FO_883_2004_INNGANGSVILKAAR,
-            false, Inngangsvilkaar.MANGLER_STATSBORGERSKAP);
+            false, Set.of(Inngangsvilkaar.MANGLER_STATSBORGERSKAP));
     }
 
     @Test
-    public void vurderOgLagreInngangsvilkår_tomDatoErNull_tomDatoSettesTilEttÅrEtterFomDato() throws FunksjonellException, TekniskException {
+    void vurderOgLagreInngangsvilkår_tomDatoErNull_tomDatoSettesTilEttÅrEtterFomDato() {
         ArgumentCaptor<no.nav.melosys.domain.behandlingsgrunnlag.data.Periode> søknadsperiodeCaptor = ArgumentCaptor.forClass(no.nav.melosys.domain.behandlingsgrunnlag.data.Periode.class);
 
         final List<String> landkoder = List.of("FR", "DK", "NO");
@@ -106,7 +153,7 @@ public class InngangsvilkaarServiceTest {
     }
 
     @Test
-    public void vurderOgLagreInngangsvilkår_feil_girBegrunnelse() throws TekniskException, FunksjonellException {
+    void vurderOgLagreInngangsvilkår_feil_girBegrunnelse() {
         final List<String> landkoder = List.of("FR", "DK", "NO");
         final var periode = new no.nav.melosys.domain.behandlingsgrunnlag.data.Periode(LocalDate.now().plusYears(1), LocalDate.MAX);
         PersonDokument personDokument = new PersonDokument();
@@ -122,19 +169,20 @@ public class InngangsvilkaarServiceTest {
 
         inngangsvilkaarService.vurderOgLagreInngangsvilkår(1L, landkoder, periode);
 
-        verify(inngangsvilkaarConsumer).vurderInngangsvilkår(eq(personDokument.statsborgerskap), eq(Set.copyOf(tilIso3(landkoder))), eq(periode));
+        verify(inngangsvilkaarConsumer).vurderInngangsvilkår(Set.of(personDokument.statsborgerskap),
+            Set.copyOf(tilIso3(landkoder)), periode);
         verify(vilkaarsresultatService).oppdaterVilkaarsresultat(1L, Vilkaar.FO_883_2004_INNGANGSVILKAAR,
-            false, Inngangsvilkaar.TEKNISK_FEIL);
+            false, Set.of(Inngangsvilkaar.TEKNISK_FEIL));
     }
 
     @Test
-    public void avgjørStatsborgerskapPåStartDato_tomListe_girNull() {
+    void avgjørStatsborgerskapPåStartDato_tomListe_girNull() {
         Land stastborgerskap = inngangsvilkaarService.avgjørStatsborgerskapPåStartDato(new ArrayList<>(), null);
-        assertNull(stastborgerskap);
+        assertThat(stastborgerskap).isNull();
     }
 
     @Test
-    public void avgjørStatsborgerskapPåStartDato_ingenGyldige_girNull() {
+    void avgjørStatsborgerskapPåStartDato_ingenGyldige_girNull() {
         List<StatsborgerskapPeriode> statsborgerskapPerioder = new ArrayList<>();
         StatsborgerskapPeriode p1 = new StatsborgerskapPeriode();
         p1.statsborgerskap = av(BELGIA);
@@ -145,11 +193,11 @@ public class InngangsvilkaarServiceTest {
         p2.periode = new Periode(LocalDate.of(2018, 4, 1), LocalDate.of(2018, 5, 2));
         statsborgerskapPerioder.add(p2);
         Land stastborgerskap = inngangsvilkaarService.avgjørStatsborgerskapPåStartDato(statsborgerskapPerioder, LocalDate.of(2019, 2, 1));
-        assertNull(stastborgerskap);
+        assertThat(stastborgerskap).isNull();
     }
 
     @Test
-    public void avgjørStatsborgerskapPåStartDato_flerePerioder_girPeriodenSomInkludererStartdato() {
+    void avgjørStatsborgerskapPåStartDato_flerePerioder_girPeriodenSomInkludererStartdato() {
         List<StatsborgerskapPeriode> statsborgerskapPerioder = new ArrayList<>();
         StatsborgerskapPeriode p1 = new StatsborgerskapPeriode();
         p1.statsborgerskap = av(BELGIA);
@@ -164,7 +212,7 @@ public class InngangsvilkaarServiceTest {
     }
 
     @Test
-    public void avgjørStatsborgerskapPåStartDato_flerePerioder_filtererSkd() {
+    void avgjørStatsborgerskapPåStartDato_flerePerioder_filtererSkd() {
         List<StatsborgerskapPeriode> statsborgerskapPerioder = new ArrayList<>();
         StatsborgerskapPeriode p1 = new StatsborgerskapPeriode();
         p1.statsborgerskap = av(BELGIA);
@@ -181,7 +229,7 @@ public class InngangsvilkaarServiceTest {
     }
 
     @Test
-    public void avgjørStatsborgerskapPåStartDato_flereGyldige_filtrererUkjent() {
+    void avgjørStatsborgerskapPåStartDato_flereGyldige_filtrererUkjent() {
         List<StatsborgerskapPeriode> statsborgerskapPerioder = new ArrayList<>();
         StatsborgerskapPeriode p1 = new StatsborgerskapPeriode();
         p1.statsborgerskap = av(BELGIA);
@@ -200,7 +248,7 @@ public class InngangsvilkaarServiceTest {
     }
 
     @Test
-    public void avgjørStatsborgerskapPåStartDato_flereGyldige_girSistEndret() {
+    void avgjørStatsborgerskapPåStartDato_flereGyldige_girSistEndret() {
         List<StatsborgerskapPeriode> statsborgerskapPerioder = new ArrayList<>();
         StatsborgerskapPeriode p1 = new StatsborgerskapPeriode();
         p1.statsborgerskap = av(BELGIA);
@@ -216,5 +264,66 @@ public class InngangsvilkaarServiceTest {
         statsborgerskapPerioder.add(p2);
         Land stastborgerskap = inngangsvilkaarService.avgjørStatsborgerskapPåStartDato(statsborgerskapPerioder, LocalDate.of(2018, 2, 1));
         assertThat(stastborgerskap).isEqualTo(av(SVERIGE));
+    }
+
+    @Test
+    void avgjørGyldigeStatsborgerskapFraPdl() {
+        var statsborgerskapFraPdl = Set.of(
+            new no.nav.melosys.domain.person.Statsborgerskap(
+                "AAA", null, LocalDate.parse("1979-11-18"), LocalDate.parse("1980-11-18"),
+                "FREG", "Holly", false),
+            new no.nav.melosys.domain.person.Statsborgerskap(
+                "BBB", null, LocalDate.parse("1979-11-18"), LocalDate.parse("1980-11-18"),
+                "PDL", "Dolly", false),
+            new no.nav.melosys.domain.person.Statsborgerskap(
+                "CCC", null, LocalDate.parse("2020-11-18"), null,
+                "PDL", "Molly", false),
+            new no.nav.melosys.domain.person.Statsborgerskap(
+                "DDD", LocalDate.parse("2021-05-08"), LocalDate.parse("1979-11-18"), LocalDate.parse("1980-11-18"),
+                "PDL", "Molly", false),
+            new no.nav.melosys.domain.person.Statsborgerskap(
+                "EEE", null, null, null,
+                "FREG", "Nully", false)
+        );
+        var periode = new no.nav.melosys.domain.behandlingsgrunnlag.data.Periode(LocalDate.now().plusMonths(1), null);
+
+        final Set<Land> statsborgerskap = inngangsvilkaarService.avgjørGyldigeStatsborgerskapFraPdlForPerioden(statsborgerskapFraPdl,
+            periode);
+
+        assertThat(statsborgerskap).containsExactlyInAnyOrder(Land.av("CCC"), Land.av("DDD"), Land.av("EEE"));
+    }
+
+    @Test
+    void overstyrInngangsvilkårTilOppfylt_ingenInngangsvilkårFunnet_kasterFunksjonellException() {
+        when(vilkaarsresultatService.finnVilkaarsresultat(anyLong(), eq(Vilkaar.FO_883_2004_INNGANGSVILKAAR))).thenReturn(Optional.empty());
+
+        assertThatExceptionOfType(FunksjonellException.class)
+            .isThrownBy(() -> inngangsvilkaarService.overstyrInngangsvilkårTilOppfylt(1L))
+            .withMessage("Inngangsvilkår er ikke vurdert for behandling 1");
+    }
+
+    @Test
+    void overstyrInngangsvilkårTilOppfylt_inngangsvilkårFunnet_oppfyllerVilkår() {
+        Vilkaarsresultat vilkaarsresultat = new Vilkaarsresultat();
+        when(vilkaarsresultatService.finnVilkaarsresultat(anyLong(), eq(Vilkaar.FO_883_2004_INNGANGSVILKAAR))).thenReturn(Optional.of(vilkaarsresultat));
+
+        inngangsvilkaarService.overstyrInngangsvilkårTilOppfylt(1L);
+
+        verify(vilkaarsresultatService).oppdaterVilkaarsresultat(eq(1L), eq(Vilkaar.FO_883_2004_INNGANGSVILKAAR), eq(true), anySet());
+    }
+
+    @Test
+    void overstyrInngangsvilkårTilOppfylt_inngangsvilkårFunnet_beholderGamleBegrunnelserOgLeggerTilOverstyringsbegrunnelse() {
+        VilkaarBegrunnelse vilkaarBegrunnelse = new VilkaarBegrunnelse();
+        vilkaarBegrunnelse.setKode(Inngangsvilkaar.MANGLER_STATSBORGERSKAP.getKode());
+        Vilkaarsresultat vilkaarsresultat = new Vilkaarsresultat();
+        vilkaarsresultat.setBegrunnelser(Set.of(vilkaarBegrunnelse));
+        when(vilkaarsresultatService.finnVilkaarsresultat(anyLong(), eq(Vilkaar.FO_883_2004_INNGANGSVILKAAR))).thenReturn(Optional.of(vilkaarsresultat));
+
+        inngangsvilkaarService.overstyrInngangsvilkårTilOppfylt(1L);
+
+        verify(vilkaarsresultatService).oppdaterVilkaarsresultat(eq(1L), eq(Vilkaar.FO_883_2004_INNGANGSVILKAAR), anyBoolean(), eq(Set.of(
+            Inngangsvilkaar.OVERSTYRT_AV_SAKSBEHANDLER, Inngangsvilkaar.MANGLER_STATSBORGERSKAP
+        )));
     }
 }
